--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -36,7 +36,7 @@ RUN set -eux; \
     curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -; \
     curl https://packages.microsoft.com/config/debian/10/prod.list > /etc/apt/sources.list.d/mssql-release.list; \
     apt-get update && ACCEPT_EULA=Y apt-get install -y --no-install-recommends msodbcsql17 libgssapi-krb5-2; \
-    pecl install sqlsrv pdo_sqlsrv; \
+    pecl install sqlsrv-5.7.1preview pdo_sqlsrv-5.7.1preview; \
     docker-php-ext-enable sqlsrv pdo_sqlsrv; \
     pecl clear-cache; \
     apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false $MSSQL_BUILD_DEPS
