Remove ssh2 ext and update sqlsrv drivers

--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -5,7 +5,6 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 RUN set -eux; \
     apt-get update && apt-get install -y --no-install-recommends \
-        libssh2-1 \
         msmtp \
         mariadb-client; \
     apt-get clean; \
@@ -17,16 +16,12 @@ COPY msmtprc /etc/msmtprc
 # Add php extensions
 RUN set -eux; \
     PHP_BUILD_DEPS=" \
-        libssh2-1-dev \
         libldap2-dev \
         libsasl2-dev \
     "; \
     apt-get update && apt-get install -y --no-install-recommends $PHP_BUILD_DEPS; \
     docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu --with-ldap-sasl; \
     docker-php-ext-install -j$(nproc) ldap; \
-    pecl install ssh2-1.2; \
-    pecl clear-cache; \
-    docker-php-ext-enable ssh2; \
     apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false $PHP_BUILD_DEPS; \
     apt-get clean; \
     rm -r /var/lib/apt/lists/*
@@ -41,7 +36,7 @@ RUN set -eux; \
     curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -; \
     curl https://packages.microsoft.com/config/debian/10/prod.list > /etc/apt/sources.list.d/mssql-release.list; \
     apt-get update && ACCEPT_EULA=Y apt-get install -y --no-install-recommends msodbcsql17 libgssapi-krb5-2; \
-    pecl install sqlsrv-5.7.1preview pdo_sqlsrv-5.7.1preview; \
+    pecl install sqlsrv-5.9.0beta2 pdo_sqlsrv-5.9.0beta2; \
     docker-php-ext-enable sqlsrv pdo_sqlsrv; \
     pecl clear-cache; \
     apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false $MSSQL_BUILD_DEPS; \
