--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -5,6 +5,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 RUN set -eux; \
     apt-get update && apt-get install -y --no-install-recommends \
+        libssh2-1 \
         pwgen \
         msmtp \
         mariadb-client; \
@@ -20,12 +21,17 @@ COPY msmtprc /etc/msmtprc
 # Add php extensions
 RUN set -eux; \
     PHP_BUILD_DEPS=" \
+        libssh2-1-dev \
         libldap2-dev \
         libsasl2-dev \
+        libxml2-dev \
     "; \
     apt-get update && apt-get install -y --no-install-recommends $PHP_BUILD_DEPS; \
     docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu --with-ldap-sasl; \
-    docker-php-ext-install -j$(nproc) ldap; \
+    docker-php-ext-install -j$(nproc) ldap soap; \
+    pecl install ssh2-1.3.1; \
+    pecl clear-cache; \
+    docker-php-ext-enable ssh2; \
     apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false $PHP_BUILD_DEPS; \
     apt-get clean; \
     rm -r /var/lib/apt/lists/*
