Update sqlsrv to lastest version

--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -11,6 +11,7 @@ RUN set -eux; \
         unzip \
         openssh-client \
         libssh2-1 \
+        unixodbc \
         pwgen \
         msmtp \
         mariadb-client; \
@@ -52,7 +53,7 @@ RUN set -eux; \
     curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -; \
     curl https://packages.microsoft.com/config/debian/10/prod.list > /etc/apt/sources.list.d/mssql-release.list; \
     apt-get update && ACCEPT_EULA=Y apt-get install -y --no-install-recommends msodbcsql17 libgssapi-krb5-2; \
-    pecl install sqlsrv-5.10.0 pdo_sqlsrv-5.10.0; \
+    pecl install sqlsrv pdo_sqlsrv; \
     docker-php-ext-enable sqlsrv pdo_sqlsrv; \
     pecl clear-cache; \
     apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false $MSSQL_BUILD_DEPS; \
