--- a/8.0/cli/Dockerfile
+++ b/8.0/cli/Dockerfile
@@ -1,6 +1,8 @@
 FROM yannickvh/php-prod:8.0-cli
 LABEL maintainer="Yannick Vanhaeren"
 
+ENV TZ="Europe/Brussels"
+
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN set -eux; \
