--- a/7.3/apache/Dockerfile
+++ b/7.3/apache/Dockerfile
@@ -3,7 +3,7 @@ LABEL maintainer="Yannick Vanhaeren"
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN set -eux; \
+RUN set -e; \
     apt-get update && apt-get install -y --no-install-recommends \
         libssh2-1 \
         pwgen \
@@ -19,7 +19,7 @@ RUN set -eux; \
 COPY msmtprc /etc/msmtprc
 
 # Add php extensions
-RUN set -eux; \
+RUN set -e; \
     PHP_BUILD_DEPS=" \
         libssh2-1-dev \
         libldap2-dev \
@@ -36,7 +36,7 @@ RUN set -eux; \
     rm -r /var/lib/apt/lists/*
 
 # Add MSSQL drivers
-RUN set -eux; \
+RUN set -e; \
     MSSQL_BUILD_DEPS=" \
         gnupg2 \
         unixodbc-dev \
