--- a/7.4/cli/Dockerfile
+++ b/7.4/cli/Dockerfile
@@ -10,11 +10,13 @@ RUN set -e; \
         libssh2-1 \
         msmtp; \
     apt-get clean; \
-    rm -r /var/lib/apt/lists/*; \
+    rm -r /var/lib/apt/lists/*
+
+RUN set -e; \
     cd /usr/local/etc/php; \
     sed -i -e "s|post_max_size = 8M|post_max_size = 55M|" php.ini; \
     sed -i -e "s|memory_limit = 128M|memory_limit = 1024M|" php.ini; \
-sed -i -e "s|;max_input_vars = 1000|max_input_vars = 3000|" php.ini; \
+    sed -i -e "s|;max_input_vars = 1000|max_input_vars = 3000|" php.ini; \
     sed -i -e "s|upload_max_filesize = 2M|upload_max_filesize = 50M|" php.ini; \
     sed -i -e "s|;sendmail_path =|sendmail_path = /usr/bin/msmtp -t|" php.ini
 
